# SPEO-GPU-single-control

./: LICENSE
SPEO-GPU-single-control/: CMakeCache.txt  CMakeLists.txt  Makefile  bash_OZSTAR.sh  cmake_install.cmake
SPEO-GPU-single-control/CUDA_EA_library/: CEC2014.cc  CEC2014.h  CEC2014_CUDA.cc  CEC2014_CUDA.h  DE_CUDA.cc  EA_CUDA.cc  config.h  kernel_CEC2014_CUDA.cu  kernel_DE_CUDA.cu  kernel_EA_CUDA.cu  make_CEC2014.sh  make_CEC2014_CUDA.sh  make_EA.sh  random.h
SPEO-GPU-single-control/include/: CEC2014_CUDA.h  EA_CUDA.h  buffer_manage.h  config.h  island_EA.h  migrate.h
SPEO-GPU-single-control/src/: CMakeLists.txt  Makefile  buffer_manage.cc  cmake_install.cmake  island_EA.cc  main.cc  migrate.cc  random.cc
